--- a/multimedia/audio/images/音乐评分.md
+++ b/multimedia/audio/images/音乐评分.md
@@ -31,12 +31,9 @@
 2. 旋律一样(一个调子与原唱相同，另一个压低了调子):  
     相似度(69%)
     不加滤波 相似度(78%)  
-3. 旋律不一样，声音都比较大:   
+3. 旋律不一样，声音都比较大,乱哼:   
     相似度(74%)
     不加滤波 相似度(82%)  
-4. 旋律不一样(一个调子与原唱相同，另一个压低了调子，乱哼): 
-    相似度(72%)
-    不加滤波 相似度(72%)  
 
 
 ## 印度歌曲对比结果
