--- a/android/interview/面试题.md
+++ b/android/interview/面试题.md
@@ -77,4 +77,35 @@ hprof-conv -z 1.hprof 2.hprof
   第三次gc，存活的对象拷贝到A区，把B区对象复制到A区，然后这样来回交替，这样可以记录对象经历了多少次GC，比如15次，达到15次之后在进入老年代，就可以延缓老年代内存满的时间，即减少
   Full GC的次数，从而达到了提升效率
 
+### glide相关
+
+#### glide生命周期
+[参考这里](https://www.jianshu.com/p/317b2d6bde1b)
+Glide生命周期绑定是从入口单例类Glide开始的，通过with()多个重载方法来实现对生命周期的绑定工作。
+如果是在子线程进行的with操作，那么Glide将默认使用ApplicationContext，可以理解为不对请求的生命周期进行管理，通过Activity拿到FragmentManager，并将创建RequestManager的任务传递下去。最终都走到了fragmentGet方法，注意细微区别是Activity传的参数的是Activity的FragmentManager，Fragment传的参数的是ChildFragmentManager，这两者不是一个东西。
+
+最终会创建一个 RequestManagerFragment 添加到fragmentManager中，这样RequestManagerFragment就可以感知fragement的生命周期变化,
+
+而创建RequestManagerFragment的时候会创建 RequestManager，这个类实现了 LifecycleListener，在创建 RequestManager的时候传入了lifeCycle，通过lifeCycle注册监听，从而感知相应的生命周期变化，
+
+RequestTracker即所有请求操作的真正处理者，所有Request的暂停取消执行操作都由RequestTracker来完成
+
+![glide的生命周期](images/glide_lifecycle.webp)
+
+#### glide的缓存机制
+1. glide缓存的资源
+  - 原图：SOURCE
+  - 处理之后的图片：RESULT，经过压缩和变形等处理后的图片
+2. 内存缓存策略
+  Glide默认是会在内存中缓存处理图(RESULT)的.
+3. 磁盘缓存策略(diskCacheStrategy)
+  Glide磁盘缓存策略分为四种,默认的是RESULT(默认值这一点网上很多文章都写错了,但是这一点很重要):
+  1.ALL:缓存原图(SOURCE)和处理图(RESULT)
+  2.NONE:什么都不缓存
+  3.SOURCE:只缓存原图(SOURCE)
+  4.RESULT:只缓存处理图(RESULT) —默认值
+和其他三级缓存一样,Glide的缓存读取顺序是 内存–>磁盘–>网络
+glide区图片的时候，首先会尝试从cache里面取,这里cache就是Glide的构造函数里面的MemoryCache(是一个LruResourceCache),如果取到了,就从cache里面删掉,然后加入activeResources中，如果cache里面没取到,就会从activeResources中取,activeResources是一个以弱引用为值的map,他是用于存储使用中的资源.之所以在内存缓存的基础上又多了这层缓存,是为了当内存不足而清除cache中的资源中,不会影响使用中的资源.
+
+
 
