--- a/android/interview/面试题.md
+++ b/android/interview/面试题.md
@@ -109,3 +109,21 @@ glide区图片的时候，首先会尝试从cache里面取,这里cache就是Glid
 
 
 
+
+## 项目相关
+
+
+### 项目中的难点
+#### 直播开播的时候概率性首帧数据卡死，导致ANR
+主要原因是由于多线程渲染那块导致的死锁；
+- 分析过程
+  首先在一些卡死概率较大的手机上复现，出现anr之后，拿到相关anr日志(具体就是执行 `adb bugreport`然后会在本地生成bugreport-xxxx.xxx-日期.zip个压缩包，解压缩之后进入FS/data/anr/目录下就会有最近发生的anr日志文件，每个anr一个文件，有详细的日期来命名)
+  打开anr文件,找到main 主线程，看下anr的堆栈，看到的现象确是 surfaceView 中要获取一个对象锁，获取不到导致的；
+  这下有点懵了，后来一想surfaceView应该和camera那块有些联系，然后慢慢锁定cmaera那块，通过现象发现是第一帧画面卡主，就去分析代码看下为何第一帧会卡主，最后发现是opengl美颜那里采用了多线程渲染的方式，导致渲染线程卡主了，由于渲染线程不是主线程，实际上应用不会卡死，而是当按下返回按钮，surfaceView 要销毁的时候，获取不到对象锁导致了anr;最后就着重分析渲染那块的逻辑,就发现有些锁的等待时机不正确，确实会导致两个线程有可能同时在等待，最后导致死锁；最后调整了下逻辑就解决了
+
+
+
+
+
+
+
